crates/squawk_parser/tests/snapshots/tests__alter_text_search_configuration_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_text_search_configuration.sql
---
SOURCE_FILE
  COMMENT "-- add_mapping"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE "\n    "
    ADD_MAPPING
      ADD_KW "add"
      WHITESPACE " "
      MAPPING_KW "mapping"
      WHITESPACE " "
      FOR_KW "for"
      WHITESPACE " "
      TEXT_SEARCH_TOKEN_KIND
        IDENT "t"
      WHITESPACE " "
      WITH_KW "with"
      WHITESPACE " "
      TEXT_SEARCH_DICTIONARY_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "d"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE "\n    "
    ADD_MAPPING
      ADD_KW "add"
      WHITESPACE " "
      MAPPING_KW "mapping"
      WHITESPACE " "
      FOR_KW "for"
      WHITESPACE " "
      TEXT_SEARCH_TOKEN_KIND
        IDENT "t"
      COMMA ","
      WHITESPACE " "
      TEXT_SEARCH_TOKEN_KIND
        IDENT "u"
      WHITESPACE " "
      WITH_KW "with"
      WHITESPACE " "
      TEXT_SEARCH_DICTIONARY_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "d"
      COMMA ","
      WHITESPACE " "
      TEXT_SEARCH_DICTIONARY_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "e"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- alter_mapping"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE "\n    "
    ALTER_MAPPING
      ALTER_KW "alter"
      WHITESPACE " "
      MAPPING_KW "mapping"
      WHITESPACE " "
      FOR_KW "for"
      WHITESPACE " "
      TEXT_SEARCH_TOKEN_KIND
        IDENT "t"
      WHITESPACE " "
      WITH_KW "with"
      WHITESPACE " "
      TEXT_SEARCH_DICTIONARY_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "d"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "f"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE "\n    "
    ALTER_MAPPING
      ALTER_KW "alter"
      WHITESPACE " "
      MAPPING_KW "mapping"
      WHITESPACE " "
      FOR_KW "for"
      WHITESPACE " "
      TEXT_SEARCH_TOKEN_KIND
        IDENT "t"
      WHITESPACE " "
      WITH_KW "with"
      WHITESPACE " "
      TEXT_SEARCH_DICTIONARY_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "f"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "d"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- alter_mapping_replace"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE "\n    "
    ALTER_MAPPING
      ALTER_KW "alter"
      WHITESPACE " "
      MAPPING_KW "mapping"
      WHITESPACE " "
      REPLACE_DICTIONARY
        REPLACE_KW "replace"
        WHITESPACE " "
        TEXT_SEARCH_DICTIONARY_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "o"
        WHITESPACE " "
        WITH_KW "with"
        WHITESPACE " "
        TEXT_SEARCH_DICTIONARY_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "n"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "f"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE "\n    "
    ALTER_MAPPING
      ALTER_KW "alter"
      WHITESPACE " "
      MAPPING_KW "mapping"
      WHITESPACE " "
      REPLACE_DICTIONARY
        REPLACE_KW "replace"
        WHITESPACE " "
        TEXT_SEARCH_DICTIONARY_REF
          PATH_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "f"
            DOT "."
            PATH_SEGMENT_REF
              IDENT "o"
        WHITESPACE " "
        WITH_KW "with"
        WHITESPACE " "
        TEXT_SEARCH_DICTIONARY_REF
          PATH_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "f"
            DOT "."
            PATH_SEGMENT_REF
              IDENT "n"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- alter_mapping_for_replace"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE "\n    "
    ALTER_MAPPING
      ALTER_KW "alter"
      WHITESPACE " "
      MAPPING_KW "mapping"
      WHITESPACE " "
      FOR_KW "for"
      WHITESPACE " "
      TEXT_SEARCH_TOKEN_KIND
        IDENT "t"
      WHITESPACE " "
      REPLACE_DICTIONARY
        REPLACE_KW "replace"
        WHITESPACE " "
        TEXT_SEARCH_DICTIONARY_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "o"
        WHITESPACE " "
        WITH_KW "with"
        WHITESPACE " "
        TEXT_SEARCH_DICTIONARY_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "n"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "f"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE "\n    "
    ALTER_MAPPING
      ALTER_KW "alter"
      WHITESPACE " "
      MAPPING_KW "mapping"
      WHITESPACE " "
      FOR_KW "for"
      WHITESPACE " "
      TEXT_SEARCH_TOKEN_KIND
        IDENT "t"
      WHITESPACE " "
      REPLACE_DICTIONARY
        REPLACE_KW "replace"
        WHITESPACE " "
        TEXT_SEARCH_DICTIONARY_REF
          PATH_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "f"
            DOT "."
            PATH_SEGMENT_REF
              IDENT "o"
        WHITESPACE " "
        WITH_KW "with"
        WHITESPACE " "
        TEXT_SEARCH_DICTIONARY_REF
          PATH_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "f"
            DOT "."
            PATH_SEGMENT_REF
              IDENT "n"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- drop_mapping"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE "\n    "
    DROP_MAPPING
      DROP_KW "drop"
      WHITESPACE " "
      MAPPING_KW "mapping"
      WHITESPACE " "
      FOR_KW "for"
      WHITESPACE " "
      TEXT_SEARCH_TOKEN_KIND
        IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "f"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE "\n    "
    DROP_MAPPING
      DROP_KW "drop"
      WHITESPACE " "
      MAPPING_KW "mapping"
      WHITESPACE " "
      IF_EXISTS
        IF_KW "if"
        WHITESPACE " "
        EXISTS_KW "exists"
      WHITESPACE " "
      FOR_KW "for"
      WHITESPACE " "
      TEXT_SEARCH_TOKEN_KIND
        IDENT "t"
      COMMA ","
      WHITESPACE " "
      TEXT_SEARCH_TOKEN_KIND
        IDENT "b"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      TEXT_SEARCH_CONFIGURATION
        PATH
          PATH_SEGMENT
            IDENT "m"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "f"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      TEXT_SEARCH_CONFIGURATION
        PATH
          PATH_SEGMENT
            IDENT "m"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner_to"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_NAME_REF
          IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "f"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_REF_CURRENT_USER
          CURRENT_USER_KW "current_user"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_schema"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE " "
    SET_SCHEMA
      SET_KW "set"
      WHITESPACE " "
      SCHEMA_KW "schema"
      WHITESPACE " "
      SCHEMA_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_TEXT_SEARCH_CONFIGURATION
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    CONFIGURATION_KW "configuration"
    WHITESPACE " "
    TEXT_SEARCH_CONFIGURATION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "f"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE " "
    SET_SCHEMA
      SET_KW "set"
      WHITESPACE " "
      SCHEMA_KW "schema"
      WHITESPACE " "
      SCHEMA_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
