crates/squawk_parser/tests/snapshots/tests__alter_user_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_user.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  ALTER_USER
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "u"
    WHITESPACE " "
    ROLE_OPTION_LIST
      ROLE_OPTION_GENERIC
        IDENT "superuser"
  EMPTY_STMT
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  ALTER_USER
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "u"
    WHITESPACE " "
    ROLE_OPTION_LIST
      WITH_KW "with"
      WHITESPACE " \n "
      ROLE_OPTION_GENERIC
        IDENT "superuser"
      WHITESPACE "\n "
      ROLE_OPTION_GENERIC
        IDENT "nosuperuser"
      WHITESPACE "\n "
      ROLE_OPTION_GENERIC
        IDENT "createdb"
      WHITESPACE "\n "
      ROLE_OPTION_GENERIC
        IDENT "nocreatedb"
      WHITESPACE "\n "
      ROLE_OPTION_GENERIC
        IDENT "createrole"
      WHITESPACE "\n "
      ROLE_OPTION_GENERIC
        IDENT "nocreaterole"
      WHITESPACE "\n "
      ROLE_OPTION_INHERIT
        INHERIT_KW "inherit"
      WHITESPACE "\n "
      ROLE_OPTION_GENERIC
        IDENT "noinherit"
      WHITESPACE "\n "
      ROLE_OPTION_GENERIC
        IDENT "login"
      WHITESPACE "\n "
      ROLE_OPTION_GENERIC
        IDENT "nologin"
      WHITESPACE "\n "
      ROLE_OPTION_GENERIC
        IDENT "replication"
      WHITESPACE "\n "
      ROLE_OPTION_GENERIC
        IDENT "noreplication"
      WHITESPACE "\n "
      ROLE_OPTION_GENERIC
        IDENT "bypassrls"
      WHITESPACE "\n "
      ROLE_OPTION_GENERIC
        IDENT "nobypassrls"
      WHITESPACE "\n "
      ROLE_OPTION_CONNECTION_LIMIT
        CONNECTION_KW "connection"
        WHITESPACE " "
        LIMIT_KW "limit"
        WHITESPACE " "
        LITERAL
          INT_NUMBER "10"
      WHITESPACE "\n "
      ROLE_OPTION_ENCRYPTED_PASSWORD
        ENCRYPTED_KW "encrypted"
        WHITESPACE " "
        PASSWORD_KW "password"
        WHITESPACE " "
        LITERAL
          STRING "''"
      WHITESPACE "\n "
      ROLE_OPTION_PASSWORD
        PASSWORD_KW "password"
        WHITESPACE " "
        NULL_KW "null"
      WHITESPACE "\n "
      ROLE_OPTION_PASSWORD
        PASSWORD_KW "password"
        WHITESPACE " "
        LITERAL
          STRING "'foo'"
      WHITESPACE "\n "
      ROLE_OPTION_VALID_UNTIL
        VALID_KW "valid"
        WHITESPACE " "
        UNTIL_KW "until"
        WHITESPACE " "
        LITERAL
          STRING "'2025-01-01'"
  EMPTY_STMT
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename_user"
  WHITESPACE "\n"
  ALTER_USER
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "u"
    WHITESPACE " "
    ROLE_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE
        IDENT "v"
  EMPTY_STMT
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set"
  WHITESPACE "\n"
  ALTER_USER
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "u"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      TO_CONFIG_VALUE
        EQ "="
        WHITESPACE " "
        LITERAL
          STRING "'value'"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_USER
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "u"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      TO_CONFIG_VALUE
        TO_KW "to"
        WHITESPACE " "
        LITERAL
          STRING "'value'"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_USER
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "u"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      TO_CONFIG_VALUE
        TO_KW "to"
        WHITESPACE " "
        DEFAULT_KW "default"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_USER
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "u"
    WHITESPACE " "
    IN_DATABASE
      IN_KW "in"
      WHITESPACE " "
      DATABASE_KW "database"
      WHITESPACE " "
      DATABASE_REF
        IDENT "d"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      TO_CONFIG_VALUE
        TO_KW "to"
        WHITESPACE " "
        LITERAL
          STRING "'value'"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_USER
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "u"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      FROM_CURRENT
        FROM_KW "from"
        WHITESPACE " "
        CURRENT_KW "current"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset"
  WHITESPACE "\n"
  ALTER_USER
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "u"
    WHITESPACE " "
    RESET_CONFIG_PARAM
      RESET_KW "reset"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_USER
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "u"
    WHITESPACE " "
    RESET_CONFIG_PARAM
      RESET_KW "reset"
      WHITESPACE " "
      ALL_KW "all"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_USER
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "u"
    WHITESPACE " "
    IN_DATABASE
      IN_KW "in"
      WHITESPACE " "
      DATABASE_KW "database"
      WHITESPACE " "
      DATABASE_REF
        IDENT "d"
    WHITESPACE " "
    RESET_CONFIG_PARAM
      RESET_KW "reset"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
    SEMICOLON ";"
  WHITESPACE "\n\n"
