crates/squawk_parser/tests/snapshots/tests__call_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/call.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CALL
    CALL_KW "CALL"
    WHITESPACE " "
    PROCEDURE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "do_db_maintenance"
    ARG_LIST
      L_PAREN "("
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- with_schema"
  WHITESPACE "\n"
  CALL
    CALL_KW "CALL"
    WHITESPACE " "
    PROCEDURE_NAME_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "partman"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "partition_data_proc"
    ARG_LIST
      L_PAREN "("
      ARG
        LITERAL
          STRING "'partman_test.time_taptest_table'"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- with_named_args"
  WHITESPACE "\n"
  CALL
    CALL_KW "CALL"
    WHITESPACE " "
    PROCEDURE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "do_db_maintenance"
    ARG_LIST
      L_PAREN "("
      ARG
        NAMED_ARG
          PARAM_NAME_REF
            IDENT "x"
          WHITESPACE " "
          FAT_ARROW "=>"
          WHITESPACE " "
          LITERAL
            STRING "'1'"
      COMMA ","
      WHITESPACE " "
      ARG
        LITERAL
          NULL_KW "null"
      COMMA ","
      WHITESPACE " "
      ARG
        NAMED_ARG
          PARAM_NAME_REF
            IDENT "b"
          WHITESPACE " "
          FAT_ARROW "=>"
          WHITESPACE " "
          LITERAL
            STRING "'d'"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
