crates/squawk_parser/tests/snapshots/tests__checkpoint_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/checkpoint.sql
---
SOURCE_FILE
  COMMENT "-- checkpoint"
  WHITESPACE "\n"
  CHECKPOINT
    CHECKPOINT_KW "checkpoint"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- checkpoint options"
  WHITESPACE "\n"
  CHECKPOINT
    CHECKPOINT_KW "checkpoint"
    WHITESPACE " "
    CHECKPOINT_OPTION_LIST
      L_PAREN "("
      CHECKPOINT_OPTION
        NAME
          MODE_KW "mode"
        WHITESPACE " "
        NAME_REF
          IDENT "fast"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n"
  CHECKPOINT
    CHECKPOINT_KW "checkpoint"
    WHITESPACE " "
    CHECKPOINT_OPTION_LIST
      L_PAREN "("
      CHECKPOINT_OPTION
        NAME
          MODE_KW "mode"
        WHITESPACE " "
        NAME_REF
          IDENT "spread"
      COMMA ","
      WHITESPACE " "
      CHECKPOINT_OPTION
        NAME
          IDENT "flush_unlogged"
        WHITESPACE " "
        LITERAL
          TRUE_KW "true"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n"
  CHECKPOINT
    CHECKPOINT_KW "checkpoint"
    WHITESPACE " "
    CHECKPOINT_OPTION_LIST
      L_PAREN "("
      CHECKPOINT_OPTION
        NAME
          IDENT "flush_unlogged"
        WHITESPACE " "
        LITERAL
          FALSE_KW "false"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n"
  CHECKPOINT
    CHECKPOINT_KW "checkpoint"
    WHITESPACE " "
    CHECKPOINT_OPTION_LIST
      L_PAREN "("
      CHECKPOINT_OPTION
        NAME
          IDENT "flush_unlogged"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
