crates/squawk_parser/tests/snapshots/tests__close_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/close.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  CLOSE
    CLOSE_KW "close"
    WHITESPACE " "
    NAME_REF
      IDENT "foo"
    SEMICOLON ";"
  WHITESPACE "\n"
  CLOSE
    CLOSE_KW "close"
    WHITESPACE " "
    ALL_KW "all"
    SEMICOLON ";"
  WHITESPACE "\n\n"
