crates/squawk_parser/tests/snapshots/tests__create_database_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_database.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_DATABASE
    CREATE_KW "create"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE
      IDENT "d"
    DATABASE_OPTION_LIST
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_DATABASE
    CREATE_KW "create"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE
      IDENT "d"
    WHITESPACE "\n  "
    DATABASE_OPTION_LIST
      WITH_KW "with"
      WHITESPACE " "
      DATABASE_OPTION_OWNER
        OWNER_KW "owner"
        WHITESPACE " "
        LITERAL
          STRING "'foo'"
      WHITESPACE "\n  "
      DATABASE_OPTION_TEMPLATE
        TEMPLATE_KW "template"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          STRING "'foo'"
      WHITESPACE "\n  "
      DATABASE_OPTION_ENCODING
        ENCODING_KW "encoding"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          STRING "'utf-8'"
      WHITESPACE "\n  "
      DATABASE_OPTION_GENERIC
        IDENT "strategy"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        CONFIG_VALUE_NAME
          IDENT "wal_log"
      WHITESPACE "\n  "
      DATABASE_OPTION_GENERIC
        IDENT "locale"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          STRING "'fr_FR'"
      WHITESPACE "\n  "
      DATABASE_OPTION_GENERIC
        IDENT "lc_collate"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          STRING "'fr_FR'"
      WHITESPACE "\n  "
      DATABASE_OPTION_GENERIC
        IDENT "lc_ctyep"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          INT_NUMBER "10"
      WHITESPACE "\n  "
      DATABASE_OPTION_GENERIC
        IDENT "builtin_locale"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          STRING "'en'"
      WHITESPACE "\n  "
      DATABASE_OPTION_GENERIC
        IDENT "icu_locale"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          STRING "'en'"
      WHITESPACE "\n  "
      DATABASE_OPTION_GENERIC
        IDENT "icu_rules"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          STRING "''"
      WHITESPACE "\n  "
      DATABASE_OPTION_GENERIC
        IDENT "locale_provider"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          STRING "'./foo/bar'"
      WHITESPACE "\n  "
      DATABASE_OPTION_GENERIC
        IDENT "collation_version"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          INT_NUMBER "10"
      WHITESPACE "\n  "
      DATABASE_OPTION_TABLESPACE
        TABLESPACE_KW "tablespace"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        TABLESPACE_REF
          FULL_KW "full"
      WHITESPACE "\n  "
      DATABASE_OPTION_GENERIC
        IDENT "allow_connections"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          FALSE_KW "false"
      WHITESPACE "\n  "
      DATABASE_OPTION_CONNECTION_LIMIT
        CONNECTION_KW "connection"
        WHITESPACE " "
        LIMIT_KW "limit"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          INT_NUMBER "1000"
      WHITESPACE "\n  "
      DATABASE_OPTION_GENERIC
        IDENT "is_template"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        LITERAL
          FALSE_KW "false"
      WHITESPACE "\n  "
      DATABASE_OPTION_GENERIC
        IDENT "oid"
        WHITESPACE " "
        LITERAL
          INT_NUMBER "1010"
    SEMICOLON ";"
  WHITESPACE "\n\n"
