crates/squawk_parser/tests/snapshots/tests__create_index_err.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/err/create_index.sql
---
SOURCE_FILE
  COMMENT "-- missing comma"
  WHITESPACE "\n"
  CREATE_INDEX
    CREATE_KW "create"
    WHITESPACE " "
    INDEX_KW "index"
    WHITESPACE " "
    INDEX
      PATH
        PATH_SEGMENT
          IDENT "i"
    WHITESPACE " "
    ON_KW "on"
    WHITESPACE " "
    TABLE_RELATION_NAME
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            NAME_REF
              IDENT "t"
    WHITESPACE " "
    PARTITION_ITEM_LIST
      L_PAREN "("
      PARTITION_ITEM
        NAME_REF
          IDENT "a"
        WHITESPACE " "
        NULLS_FIRST
          NULLS_KW "nulls"
          WHITESPACE " "
          FIRST_KW "first"
      WHITESPACE " "
      PARTITION_ITEM
        NAME_REF
          IDENT "b"
        WHITESPACE " "
        NULLS_FIRST
          NULLS_KW "nulls"
          WHITESPACE " "
          FIRST_KW "first"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n"
---
error[syntax-error]: expected COMMA
  ╭▸ 
2 │ create index i on t (a nulls first b nulls first);
  ╰╴                                  ━
